# ergo-headless-dapp-framework

./: Cargo.toml  README.md
ergo-headless-dapp-framework-derive/: Cargo.toml  README.md
ergo-headless-dapp-framework-derive/src/: lib.rs
src/: box_spec.rs  box_traits.rs  encoding.rs  error.rs  lib.rs  output_builders.rs  specified_boxes.rs  tx_assembler.rs  tx_creation.rs
tutorials/Math_Bounty/: 1-math-bounty-dApp-getting-started.md  2-math-bounty-dApp-finishing-the-headless-dapp.md  2-math-bounty-dApp-finishing-the-off-chain-lib.md  3-math-bounty-dApp-writing-a-cli-frontend-that-allows-creating-bounties.md
tutorials/Math_Bounty/math-bounty-cli/: Cargo.toml
tutorials/Math_Bounty/math-bounty-cli/src/: main.rs
tutorials/Math_Bounty/math-bounty-headless/: Cargo.toml
tutorials/Math_Bounty/math-bounty-headless/src/: lib.rs
