[package]
name = "ergo-headless-dapp-framework"
version = "0.1.12"
authors = ["Robert Kornacki <11645932+robkorn@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "An easy to use framework for building Ergo headless dApps."
repository = "https://github.com/ergoplatform/ergo-headless-dapp-framework"
readme = "README.md"
keywords = ["ergo", "blockchain", "dApp"]
categories = ["cryptography::cryptocurrencies"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
thiserror                           = "1.0.23"
ergo-lib                            = "0.5.1"
ergo-lib-wasm                       = "0.5.1"
serde_json                          = "1.0.61"
wasm-bindgen                        = "0.2.65"
blake2b_simd                        = "0.5.11"
base16                              = "0.2.1"
json                                = "0.12.4"
ergo_headless_dapp_framework_derive= { version = "^0.1.0", path = "./ergo-headless-dapp-framework-derive" }


[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
