[package]
name = "ergo_headless_dapp_framework_derive"
version = "0.1.2"
authors = ["Robert Kornacki <11645932+robkorn@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "Procedural macros for the Ergo Headless dApp Framework."
repository = "https://github.com/Emurgo/ergo-headless-dapp-framework"
readme = "README.md"
keywords = ["ergo", "blockchain", "dApp"]
categories = ["cryptography::cryptocurrencies"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn             = "1.0"
quote           = "1.0"