[package]
name = "math-bounty-headless"
version = "0.1.0"
authors = ["Robert Kornacki <11645932+robkorn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ergo-headless-dapp-framework    = {path = "../../../"}
ergo-lib                     = "0.4.1"
